[project]
name = "blank-app-template"
version = "0.1.0"
description = "VA Inventory Intelligence"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.59.1",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
]

[tool.uv]
package = false
